rustdocs/errors/rust-bitcoin-bitcoin-src-pow.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/bitcoin/src/pow.rs:8:5
  |
8 | use core::ops::{Add, Div, Mul, Not, Rem, Shl, Shr, Sub};
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/bitcoin/src/pow.rs:9:5
  |
9 | use core::{cmp, fmt};
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/bitcoin/src/pow.rs:11:5
   |
11 | use internals::impl_to_hex_from_lower_hex;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 8 + extern crate internals;
   |

error[E0432]: unresolved import `io`
  --> ../rust-bitcoin/bitcoin/src/pow.rs:12:5
   |
12 | use io::{BufRead, Write};
   |     ^^
   |     |
   |     unresolved import
   |     help: a similar path exists: `std::io`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `units`
  --> ../rust-bitcoin/bitcoin/src/pow.rs:13:5
   |
13 | use units::parse_int::{self, ParseIntError, PrefixedHexError, Unprefixed...
   |     ^^^^^ use of unresolved module or unlinked crate `units`
   |
help: you might be missing a crate named `units`, add it to your project and import it in your code
   |
 8 + extern crate units;
   |

error[E0432]: unresolved import `units`
  --> ../rust-bitcoin/bitcoin/src/pow.rs:13:5
   |
13 | use units::parse_int::{self, ParseIntError, PrefixedHexError, Unprefixed...
   |     ^^^^^ use of unresolved module or unlinked crate `units`
   |
help: you might be missing a crate named `units`, add it to your project and import it in your code
   |
 8 + extern crate units;
   |

error[E0432]: unresolved import `crate::block`
  --> ../rust-bitcoin/bitcoin/src/pow.rs:15:12
   |
15 | use crate::block::{BlockHash, Header};
   |            ^^^^^ use of unresolved module or unlinked crate `block`
   |
help: you might be missing a crate named `block`, add it to your project and import it in your code
   |
 8 + extern crate block;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `consensus`
  --> ../rust-bitcoin/bitcoin/src/pow.rs:16:12
   |
16 | use crate::consensus::encode::{self, Decodable, Encodable};
   |            ^^^^^^^^^ use of unresolved module or unlinked crate `consensus`
   |
help: you might be missing a crate named `consensus`, add it to your project and import it in your code
   |
 8 + extern crate consensus;
   |

error[E0432]: unresolved import `crate::consensus`
  --> ../rust-bitcoin/bitcoin/src/pow.rs:16:12
   |
16 | use crate::consensus::encode::{self, Decodable, Encodable};
   |            ^^^^^^^^^ use of unresolved module or unlinked crate `consensus`
   |
help: you might be missing a crate named `consensus`, add it to your project and import it in your code
   |
 8 + extern crate consensus;
   |

error[E0432]: unresolved import `crate::internal_macros`
  --> ../rust-bitcoin/bitcoin/src/pow.rs:17:5
   |
17 | use crate::internal_macros;
   |     ^^^^^^^^^^^^^^^^^^^^^^ no `internal_macros` in the root

error[E0432]: unresolved import `crate::network`
  --> ../rust-bitcoin/bitcoin/src/pow.rs:18:12
   |
18 | use crate::network::Params;
   |            ^^^^^^^ use of unresolved module or unlinked crate `network`
   |
help: you might be missing a crate named `network`, add it to your project and import it in your code
   |
 8 + extern crate network;
   |

error[E0432]: unresolved import `primitives`
  --> ../rust-bitcoin/bitcoin/src/pow.rs:22:9
   |
22 | pub use primitives::CompactTarget;
   |         ^^^^^^^^^^ use of unresolved module or unlinked crate `primitives`
   |
help: you might be missing a crate named `primitives`, add it to your project and import it in your code
   |
 8 + extern crate primitives;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `hex`
   --> ../rust-bitcoin/bitcoin/src/pow.rs:945:17
    |
945 |                 hex::fmt_hex_exact!(f, 32, &self.to_be_bytes(), $case)
    |                 ^^^ use of unresolved module or unlinked crate `hex`
...
950 | impl_hex!(fmt::LowerHex, hex::Case::Lower);
    | ------------------------------------------ in this macro invocation
    |
    = note: this error originates in the macro `impl_hex` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `hex`
   --> ../rust-bitcoin/bitcoin/src/pow.rs:945:17
    |
945 |                 hex::fmt_hex_exact!(f, 32, &self.to_be_bytes(), $case)
    |                 ^^^ use of unresolved module or unlinked crate `hex`
...
951 | impl_hex!(fmt::UpperHex, hex::Case::Upper);
    | ------------------------------------------ in this macro invocation
    |
    = note: this error originates in the macro `impl_hex` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
   --> ../rust-bitcoin/bitcoin/src/pow.rs:447:79
    |
447 | ...t<usize, io::Error> {
    |             ^^ use of unresolved module or unlinked crate `io`
    |
    = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
    |
447 -     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, io::Error> {
447 +     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, i8::Error> {
    |
help: consider importing this module
    |
  8 + use std::io;
    |

error: aborting due to 15 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
